# CuMind

./: .gitignore  CONTRIBUTING.md  README.md  Release_Notes.txt  configuration.json  pyproject.toml  traininglog
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
checkpoints/: cartpole_episode_00050.pkl  cartpole_episode_00100.pkl  cartpole_episode_00200.pkl  cartpole_episode_00250.pkl  cartpole_episode_00300.pkl  cartpole_episode_00550.pkl  cartpole_episode_00650.pkl  cartpole_episode_00700.pkl  cartpole_episode_00750.pkl  cartpole_episode_00800.pkl  cartpole_episode_00850.pkl  cartpole_episode_00900.pkl  cartpole_episode_00950.pkl  cartpole_episode_01050.pkl  cartpole_episode_01250.pkl  cartpole_episode_01300.pkl  cartpole_episode_01350.pkl  cartpole_episode_01400.pkl  cartpole_episode_01450.pkl  cartpole_episode_01550.pkl  cartpole_episode_01600.pkl  cartpole_episode_01650.pkl  cartpole_episode_01700.pkl  cartpole_episode_01750.pkl  cartpole_episode_02000.pkl  cartpole_episode_02050.pkl  cartpole_episode_02100.pkl  cartpole_episode_02200.pkl  cartpole_episode_02250.pkl  cartpole_episode_02350.pkl  cartpole_episode_02550.pkl  cartpole_episode_02650.pkl  cartpole_episode_02750.pkl  cartpole_episode_02800.pkl  cartpole_episode_02900.pkl  cartpole_episode_03000.pkl  cartpole_episode_03150.pkl  cartpole_episode_03350.pkl  cartpole_episode_03450.pkl  cartpole_episode_03600.pkl  (+60 more)
configs/: default.yaml
docs/: GPU_PERFORMANCE_TIPS.md  ONBOARDING.md
examples/: cartpole_example.py
scripts/: exportconfig.py  gpu_optimized_train.py  plot.py  qc.py  rmpycache.sh  scripts.py
src/: cartpole.py
src/cumind/: __init__.py  __main__.py  agent.py  (+5 more)
tests/: test_agent.py  test_basic.py  test_config.py  test_data.py  test_mcts.py  test_muzero.py  test_network.py  test_tui.py  test_utils.py
(+50 files in other folders)
