# =========================
# Project Metadata
# =========================
[project]
name = "cumind"
version = "0.1.6"
description = "CUAIS CuMind implementation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.0",
    "gymnasium>=1.1.1",
    "pygame>=2.6.1",
    "tqdm>=4.67.1",
    "jax>=0.6.2",
    "flax>=0.10.6",
    "optax>=0.2.5",
    "chex>=0.1.89",
    "wandb>=0.20.1",
    "tensorboard>=2.19.0",
    "ipython>=9.3.0",
    "ipykernel>=6.29.5",
]

# JAX Dependencies:
# - jax: Core JAX library for numerical computing
# - flax: Neural network library built on JAX
# - optax: Gradient-based optimization library 
# - chex: Testing and assertion utilities for JAX

# Note: JAX CPU version is used by default
# To install other JAX versions, use:
# pip install -U jax[cuda12]     # for NVIDIA GPUs with CUDA 12
# pip install -U jax[tpu]        # for TPU
# pip install -U jax[rocm]       # for AMD GPUs  
# pip install -U jax[metal]      # for Apple Silicon


# =========================
# Build System
# =========================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# =========================
# Dependency Groups
# =========================
[dependency-groups]
dev = ["ruff>=0.11.13", "pytest>=8.4.0", "mypy>=1.16.0"]

# =========================
# Tooling Configuration
# =========================

# Ruff configuration
[tool.ruff]
line-length = 320
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"] # Errors, pyFlakes, Import, Naming, Warnings
ignore = ["E203", "E501", "F401"]

# Mypy configuration
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

# =========================
# UV Configuration
# =========================
